@@ -60,8 +60,8 @@ These functions have the following prototypes.
 @example
 
 
-bool xslt::stylesheet::apply (xml::document &doc, xml::document &result);
-bool xslt::stylesheet::apply (xml::document &doc, xml::document &result, const param_type &with_params);
+bool xslt::stylesheet::apply (const xml::document &doc, xml::document &result);
+bool xslt::stylesheet::apply (const xml::document &doc, xml::document &result, const param_type &with_params);
 
 
 @end example
@@ -81,8 +81,8 @@ These functions have the following prototypes.
 @example
 
 
-xml::document& xslt::stylesheet::apply (xml::document &doc);
-xml::document& xslt::stylesheet::apply (xml::document &doc, const param_type &with_params);
+xml::document& xslt::stylesheet::apply (const xml::document &doc);
+xml::document& xslt::stylesheet::apply (const xml::document &doc, const param_type &with_params);
 
 
 @end example
